Pending changes in the mainline
===============================


Version 1.0 (2024-06-14)
========================

=> Minimum SDK version: 1.10.0 <=

* Initial release